Stop horizontal scrollbar

--- a/symfony/assets/styles/AgencyAdmin/style.scss
+++ b/symfony/assets/styles/AgencyAdmin/style.scss
@@ -1,3 +1,8 @@
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 h1 {
   font-size: 1.75rem;
   padding-bottom: 1rem;
